[package]
name = "antidotrs"
version = "0.1.0"
edition = "2021"
description = "A multithreaded daemon that removes any specified directory from ~ :3"
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
daemonize = "0.5.0"
toml = "0.8.8"
